--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -106,7 +106,6 @@ button {
   font-size: 1rem;
   transition: all 0.2s ease-in-out;
   border-radius: 4px;
-  box-shadow: 0 0 6px var(--ev-c-accent-glow);
 }
 
 button:hover {
@@ -130,25 +129,6 @@ button {
   flex: 1;
 }
 
-.sound-btn {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  padding: 0.25rem;
-  display: flex;
-  opacity: 0;
-  transition:
-    opacity 0.3s ease,
-    transform 0.3s ease;
-}
-.sound-btn[data-running='true'] {
-  opacity: 1;
-}
-
-.sound-btn[data-running='false'] {
-  opacity: 0;
-  pointer-events: none;
-}
 /* --- Statuses --- */
 .status {
   font-weight: 500;
@@ -232,4 +212,131 @@ button {
 .timer-status {
   opacity: 0.7;
   letter-spacing: 1px;
+}
+
+/* SOUND Controls Styles*/
+.vol-btn {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  padding: 0.25rem;
+  display: flex;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
+}
+
+.vol-btn[data-running='true'] {
+  opacity: 1;
+}
+
+.vol-btn[data-running='false'] {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.sound-menu {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: flex;
+  opacity: 0;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
+}
+.sound-menu-dd {
+  position: relative;
+}
+.sound-menu[data-running='false'] {
+  opacity: 1;
+}
+.music-btn {
+  display: flex;
+  padding: 0.25rem;
+}
+
+.sound-menu[data-running='true'] {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.music-dropdown {
+  position: absolute;
+  top: 130%;
+  right: 0;
+  background: var(--ev-c-black);
+  padding: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
+  flex-direction: column;
+  z-index: 20;
+  border-radius: 0.5rem;
+  min-width: 180px;
+  font-family: 'Press Start 2P', monospace;
+  font-size: 8px;
+  border: 1px solid var(--ev-c-accent);
+}
+
+.music-option {
+  color: var(--ev-c-accent);
+  background: transparent;
+  border: none;
+  text-align: left;
+  padding: 0.3rem 0.2rem;
+  cursor: pointer;
+  font-size: 0.7rem;
+  image-rendering: pixelated;
+}
+
+.music-option:hover,
+.music-option.active {
+  background: var(--ev-c-accent);
+  color: var(--ev-c-black);
+}
+
+.volume-control {
+  display: flex;
+  background: var(--ev-c-black-soft);
+  padding: 0.5rem;
+  border-radius: 6px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.volume-control label {
+  width: 100%;
+  font-size: 0.7rem;
+  color: var(--ev-c-text-2);
+  font-family: 'Bitcount Prop Single', monospace;
+  text-align: left;
+}
+
+.volume-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 6px;
+  background: var(--ev-c-black-soft);
+  outline: none;
+  border-radius: 2px;
+}
+
+.volume-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  background: var(--ev-c-accent);
+  cursor: pointer;
+  border: 1px solid var(--ev-c-black);
+  image-rendering: pixelated;
+}
+
+.volume-slider::-moz-range-thumb {
+  width: 10px;
+  height: 10px;
+  background: var(--ev-c-accent);
+  border: 1px solid var(--ev-c-black);
+  cursor: pointer;
 }
